--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "UT full-stack web-dev bootcamp: Project-3",
   "main": "index.js",
   "scripts": {
+    "nm": "nodemon server.js",
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
