added homepage to package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "burkholder-eyelashes",
+  "homepage": "https://burkholder-eyelashes.com",
   "version": "1.0.0",
   "description": "UT full-stack web-dev bootcamp: Project-3",
   "main": "index.js",
