--- a/client/.gitignore
+++ b/client/.gitignore
@@ -223,3 +223,4 @@ sketch
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,git,node,react
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
+.package-lock.json
