--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
-    "expres": "^0.0.5",
+    "express": "^4.17.3",
     "mongoose": "^6.2.11",
     "nodemon": "^2.0.15"
   }
