--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001",
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@apollo/client": "^3.5.10",
     "@headlessui/react": "^1.5.0",
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
+    "react-redux": "^7.2.8",
     "react-router-dom": "0.0.0-experimental-compat.6",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
