--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "concurrently": "^7.0.0"
   },
   "dependencies": {
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "react-file-base64": "^1.0.3"
   }
 }
