--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@apollo/client": "^3.5.10",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
+    "@material-ui/core": "^4.12.4",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.1",
     "@testing-library/jest-dom": "^5.16.4",
