--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,12 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
     "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.6.3",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.1",
     "@testing-library/jest-dom": "^5.16.4",
