--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "concurrently": "^7.0.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.3",
     "dotenv": "^16.0.0",
     "react-file-base64": "^1.0.3"
   }
